--- a/app/src/main/res/layout/item_cervejaria.xml
+++ b/app/src/main/res/layout/item_cervejaria.xml
@@ -1,131 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/card_horizontal_margin"
-    android:layout_marginRight="@dimen/card_horizontal_margin"
-    android:layout_marginTop="@dimen/card_vertical_margin"
-    android:id="@+id/container">
+    android:gravity="center_vertical"
+    android:background="@color/colorBgLight"
+    android:id="@+id/cnItem"
+    android:weightSum="2">
 
     <LinearLayout
-        android:id="@+id/content"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_top_card_view_bg_light">
+        android:id="@+id/cnImage"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.6"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical">
 
-        <LinearLayout
-            android:id="@+id/containerHeader"
-            android:orientation="horizontal"
+        <ImageView
+            android:id="@+id/imBeer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:padding="5dp">
-
-            <LinearLayout
-                android:id="@+id/containerImage"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_vertical">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/imgBeer"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/beer_example"
-                    android:scaleType="centerCrop" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/containerInfos"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical">
-
-
-                    <TextView
-                        android:id="@+id/nameBeer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Guinness Draught"
-                        style="@style/NameBeer"/>
-
-                    <TextView
-                        android:id="@+id/nameBrewer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="Guinness"
-                        style="@style/NameBrewer"/>
-
-                    <TextView
-                        android:id="@+id/nameCountry"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Irlanda"
-                        style="@style/OtherDelaisBeer"/>
-
-                    <TextView
-                        android:id="@+id/typeBeer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="Classic Irish-Style Dry Stout"
-                        style="@style/OtherDelaisBeer"/>
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:id="@+id/containerImgFav"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:layout_gravity="center_vertical">
-
-                <ImageButton
-                    android:id="@+id/btnFav"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_favorite_border_white_36dp"/>
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@id/containerInfos"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_bottom_card_view_brown">
-
-            <TextView
-                android:id="@+id/varAbv"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:text="ABV 5,8%"
-                style="@style/OtherInfosBeer"/>
-
-            <TextView
-                android:id="@+id/varIbu"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:text="IBU 50"
-                style="@style/OtherInfosBeer"/>
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:src="@drawable/beer_example"
+            android:scaleType="centerCrop" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/containerInfos"
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/view_bottom_divider_borwn"
+        android:layout_weight="1.4"
+        android:gravity="center_vertical"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin_small"
+        android:paddingLeft="@dimen/card_horizontal_margin_small"
+        android:paddingRight="@dimen/card_horizontal_margin_small">
+
+        <TextView
+            android:id="@+id/txBrewery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Guinness"
+            android:maxLines="3"
+            style="@style/TextLarge.Bold.Brown"/>
+
+        <TextView
+            android:id="@+id/txCountry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/card_vertical_margin_space"
+            android:text="Irlanda"
+            style="@style/TextMedium.Regular.Brown"/>
+
+        <TextView
+            android:id="@+id/txCountBeer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/card_vertical_margin_space"
+            android:text="@string/brewery_qty"
+            style="@style/TextRegular.Regular.Brown"/>
+
+        <TextView
+            android:id="@+id/txCountStyles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/brewery_styles"
+            style="@style/TextRegular.Regular.Brown"/>
+
+    </LinearLayout>
 
 </LinearLayout>
