--- a/app/src/main/res/layout/item_estilo.xml
+++ b/app/src/main/res/layout/item_estilo.xml
@@ -3,56 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/card_horizontal_margin"
-    android:layout_marginRight="@dimen/card_horizontal_margin"
-    android:layout_marginTop="@dimen/card_vertical_margin"
+    android:background="@drawable/view_bottom_divider_borwn_background_light"
+    android:padding="@dimen/activity_horizontal_margin"
     android:id="@+id/container">
 
     <LinearLayout
-        android:id="@+id/content"
+        android:id="@+id/containerInfos"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_top_card_view_bg_light">
+        android:weightSum="2"
+        android:gravity="center_vertical">
 
-        <LinearLayout
-            android:id="@+id/containerHeader"
-            android:orientation="horizontal"
+        <TextView
+            android:id="@+id/txStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:padding="5dp">
+            android:text="Guinness Draught"
+            style="@style/NameBeer"/>
 
-            <LinearLayout
-                android:id="@+id/containerInfos"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:gravity="center_vertical">
-
-
-                    <TextView
-                        android:id="@+id/nameStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Guinness Draught"
-                        style="@style/NameBeer"/>
-
-                    <TextView
-                        android:id="@+id/shortDesc"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="This light- to medium-bodied deep copper to brown ale is characterized by a slight to strong lactic sourness, and with Reds sometimes a balanced degree of acetic acid..."
-                        style="@style/OtherDelaisBeer"/>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/txShortDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin_small"
+            android:text="This light- to medium-bodied deep copper to brown ale is characterized by a slight to strong lactic sourness, and with Reds sometimes a balanced degree of acetic acid..."
+            style="@style/OtherDelaisBeer"/>
 
     </LinearLayout>
-
 
 </LinearLayout>
