Correções dos assets.

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,10 +22,9 @@
 
             <ImageView
                 android:id="@+id/imgLogo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/login_image_logo_padding"
-                android:src="@drawable/logo"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo_brewjas"/>
 
         </LinearLayout>
 
