--- a/app/src/main/res/layout/activity_breja.xml
+++ b/app/src/main/res/layout/activity_breja.xml
@@ -21,7 +21,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/nav_header_height"
-                android:background="@drawable/beer_example"
+                android:background="@drawable/ic_beer_example"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"/>
