--- a/app/src/main/res/layout/item_breja.xml
+++ b/app/src/main/res/layout/item_breja.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.1"
+        android:layout_weight="1.2"
         android:background="@color/colorBgLight">
 
         <LinearLayout
@@ -122,7 +122,7 @@
         android:id="@+id/containerImage"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.9"
+        android:layout_weight="0.8"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical">
 
@@ -130,15 +130,15 @@
             android:id="@+id/imBeer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/beer_example" />
+            android:background="@drawable/ic_beer_example" />
 
         <RelativeLayout
             android:id="@+id/cnImgFavTw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin_small"
+            android:layout_marginRight="@dimen/activity_vertical_margin_small"
             android:gravity="center_horizontal|center_vertical"
             android:layout_alignParentRight="true">
 
