--- a/app/src/main/res/layout/item_breja_relacionado.xml
+++ b/app/src/main/res/layout/item_breja_relacionado.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/imBeer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/beer_example"
+                android:src="@drawable/ic_beer_example"
                 android:scaleType="centerCrop" />
 
         </LinearLayout>
