--- a/app/src/main/res/layout/nav_header_dash_board.xml
+++ b/app/src/main/res/layout/nav_header_dash_board.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@drawable/logo_header" />
+            android:src="@drawable/ic_logo_header" />
 
         <LinearLayout
             android:orientation="vertical"
